# pace26stride

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: lib.rs  opts.rs  run_directory.rs  test_helpers.rs
src/commands/: arguments.rs  check.rs  mod.rs  profile.rs
src/commands/run/: command.rs  display.rs  instances.rs  mod.rs  summary_writer.rs  upload.rs
src/job/: check_and_extract.rs  job.rs  job_processor.rs  mod.rs  solver_executor.rs
testcases/: test.lst  test_summary.lst
testcases/instance_only/: header_missing.in  header_too_late.in  stride_format_error.in  stride_json_error.in  too_duplicate_leaves.in  too_few_leaves.in  too_few_trees.in  too_invalid_leaf_0.in  too_invalid_leaf_3.in  too_many_trees.in  unrecog_dash_line.in  unrecog_line.in  whitespace.in
testcases/invalid_solutions/: duplicate.in  duplicate.out  duplicate1.in  duplicate1.out  no_cover.in  score1_sa2e2l7j.in  score1_sa2e2l7j.out  score2_9kz9_01h.in  score2_9kz9_01h.out
testcases/test_solver_errors/: exit_code1.in  infeasible.in  no_response.in  nocover.in  syntaxerror.in  timeout.in
testcases/test_solver_valid/: report_envs.in  requires_grace.in  valid.in  valid_alloc50mb.in  valid_busywait.in  valid_longwait.in  valid_with_info.in
testcases/valid_instance_solution_pairs/: score10_v7mftewj.in  score11_5hkte7mt.out  score11_9mubypv2.out  score11_9strw_2s.in  score11_9strw_2s.out  score11_bajc8w4a.in  score11_qknznyss.in  score11_upux0vxi.out  score18_80w62f4l.in  score18_80w62f4l.out  score19_bdmt2qm6.in  score19_bdmt2qm6.out  score19_ccsviiyp.out  score19_n07idkk1.in  score19_n07idkk1.out  score1_sa2e2l7j.out  score2_9kz9_01h.in  score2_bz307ym1.in  score2_dead.in  score2_w3rrua7t.in  score2_w3rrua7t.out  score2_wro20cys.in  score2_wro20cys.out  score3_zg4h937t.in  score4_7nr6b2vr.in  score4_fgreig4_.in  score4_gz9c49hw.in  score4_gz9c49hw.out  score4_kov6htjd.in  score4_kov6htjd.out  score4_nhddat06.in
testcases/valid_solutions/: score10_n07l_lkc.in  score10_n07l_lkc.out  score10_v7mftewj.out  score11_5hkte7mt.in  score11_9mubypv2.in  score11_bajc8w4a.out  score11_mtnkgay0.in  score11_mtnkgay0.out  score11_qknznyss.out  score11_upux0vxi.in  score17_c9flzu4s.in  score17_c9flzu4s.out  score18_85pdwc96.in  score18_85pdwc96.out  score19_ccsviiyp.in  score19_kfnilqel.in  score19_kfnilqel.out  score1_sa2e2l7j.in  score2_9kz9_01h.out  score2_9zwvheig.in  score2_9zwvheig.out  score2_bz307ym1.out  score3_zg4h937t.out  score4_7nr6b2vr.out  score4_fgreig4_.out  score4_nhddat06.out  score4_r49h5lj2.in  score4_r49h5lj2.out  score5_pvsgw_rw.in  score5_pvsgw_rw.out
tests/: comannd_check.rs  command_run.rs  job_execution.rs  profile.rs  summary.rs
