[package]
name = "pace26stride"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
ctrlc = "3.5.1"
num_cpus = "1.17.0"
pace26io = { git = "https://github.com/manpen/pace26io.git" }
pace26checker = { git = "https://github.com/manpen/pace26checker.git" }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "process", "time", "fs", "signal"] }
derive_builder = "0.20.2"
libc = "0.2.177"
tracing = "0.1.41"
serde_json = "1.0.145"
glob = "0.3.3"
tracing-subscriber = "0.3.20"
indicatif = "0.18.3"
console = "0.16.1"
futures = "0.3.31"
clap = { version = "4.5.53", features = ["derive", "env"] }

[dev-dependencies]
regex = "1.12.2"
tempdir = "0.3.7"
tracing-test = "0.2.5"

[profile.smaller-release]
inherits = "release"
lto = true
opt-level = "z"
strip = true 
codegen-units = 1
panic = "abort"

[[bin]]
name = "stride"

[[bin]]
name = "test_solver"
