[package]
name = "pace26stride"
version = "0.1.0"
edition = "2024"
default-run = "stride"

[dependencies]
pace26checker = { git = "https://github.com/manpen/pace26checker.git", features = ["with_digest"] }
pace26remote = { git = "https://github.com/manpen/pace26remote.git", features = ["upload"] }
pace26io = { version = "0.1.0" }

chrono = "0.4.42"
ctrlc = { version = "3.5.1", features = ["termination"] }
num_cpus = "1.17.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "process", "time", "fs", "signal"] }
derive_builder = "0.20.2"
libc = "0.2.177"
tracing = "0.1.41"
serde_json = { version = "1.0.145", features = ["preserve_order"] }
glob = "0.3.3"
tracing-subscriber = "0.3.20"
indicatif = "0.18.3"
console = "0.16.1"
clap = { version = "4.5.53", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
url = "2.5.7"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls", "charset", "system-proxy"], default-features = false }
dotenv = "0.15.0"

[dev-dependencies]
regex = "1.12.2"
tempdir = "0.3.7"
tracing-test = "0.2.5"

[profile.smaller-release]
inherits = "release"
lto = true
opt-level = "z"
strip = true 
codegen-units = 1

[[bin]]
name = "stride"

[[bin]]
name = "test_solver"
